--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+# Database related properties
 spring.datasource.url                                     = jdbc:hsqldb:file:db/event
 spring.datasource.username                                = sa
 spring.datasource.password                                =
@@ -6,6 +7,7 @@ spring.jpa.show-sql                                       = false
 spring.jpa.hibernate.ddl-auto                             = create
 spring.jackson.deserialization.fail-on-unknown-properties = true
 
+# Logger related properties
 logging.level.org.springframework.web=INFO
 logging.level.org.hibernate=ERROR
-logging.level.org.creditsuisse=DEBUG
+logging.level.com.sujit.creditsuisse=DEBUG
